<resources>
    <string name="app_name">Android GPS Navigator</string>
    <string name="traffic">traffic</string>
    <string name="night_mode">night</string>
    <string name="rate_us">rate us</string>
    <string name="share_us">share</string>
    <string name="satelite">Satellite view</string>
    <string name="share_my_app">Check this app on play store</string>
    <string name="choose_origin_default">Choose Origin</string>
    <string name="choose_destination_default">Choose Destination</string>
    <string name="choose_place_default">Choose place</string>
    <string name="positive_text">Accept</string>
    <string name="negative_text">Decline</string>
    <string name="tos_title"><u>Terms and Conditions</u></string>
    <string name="policy_title"><u>Privacy policy</u></string>
    <string name="and">and</string>
    <string name="by_clicking">I accept </string>
    <string name="start">Start</string>
</resources>
