<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/splash_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:fitsSystemWindows="false">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="25dp">


        <LinearLayout
            android:layout_below="@+id/icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="25dp"
                android:paddingRight="25dp">

                <CheckBox
                    android:id="@+id/checkBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/accept"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:text="@string/by_clicking"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/policy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoLink="all"
                    android:linksClickable="true"
                    android:onClick="policyClick"
                    android:text="@string/policy_title"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp"
                    android:textStyle="bold"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="25dp"
                android:paddingRight="25dp">

                <TextView
                    android:id="@+id/and"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:text="@string/and"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/terms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="termsClick"
                    android:text="@string/tos_title"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp"
                    android:autoLink="all"
                    android:linksClickable="true"
                    android:textStyle="bold"/>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/icon"
            android:layout_alignParentStart="true"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:text="@string/app_name"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:paddingStart="25dp"
            android:paddingTop="50dp"
            android:paddingEnd="25dp"
            android:paddingBottom="50dp"
            android:src="@mipmap/ic_launcher"
            android:visibility="visible" />

        <TextView
            android:id="@+id/start_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/start"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />


    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>